Fix: Remove letter spacing

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -27,8 +27,6 @@
 
 .content {
   h1 {
-    letter-spacing: -0.05rem;
-
     line-height: calc(2 * var(--line-height));
     text-transform: uppercase;
     margin-top: calc(5 * var(--line-height));
